[package]
name = "sim-city-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11.1.3"
serde = "1.0.149"
serde_json = "1.0"
serde_derive = "1.0.149"
winit = "0.27"
winit_input_helper = "0.13"
pixels = "0.10.0"